Issue #23640: int.from_bytes() no longer bypasses constructors for subclasses.